# AdventOfCode

./: .gitignore  Cargo.toml  README.md  cachegrind.out.90809  report.json  results.txt
.cargo/: config.toml
problem_inputs_2015/: day_21_test.txt
problem_inputs_2018/: day_16_test.txt
problem_inputs_2019/: day_9_test.txt
problem_inputs_2021/: day_15.txt:Zone.Identifier
src/: day1.rs  main.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day16.rs  day19.rs  day2.rs  day20.rs  day21.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
src/year_2015/: day1.rs  day10.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day19.rs  day20.rs  day22.rs  day24.rs  day4.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  template.rs
src/year_2016/: day1.rs  day10.rs  day13.rs  day14.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  day9.rs  mod.rs  template.rs
src/year_2017/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day18.rs  day19.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day5.rs  day7.rs  day8.rs  day9.rs  mod.rs  template.rs
src/year_2018/: day1.rs  day10.rs  day13.rs  day15.rs  day16.rs  day18.rs  day19.rs  day21.rs  day23.rs  day24.rs  day25.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs  template.rs
src/year_2019/: day1.rs  day10.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day22.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs  mod.rs  template.rs
src/year_2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day18.rs  day19.pest  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  template.rs
src/year_2021/: day1.rs  day10.rs  day12.rs  day13.rs  day16.rs  day18.rs  day19.rs  day2.rs  day21.rs  day22.rs  day23.rs  day25.rs  day3.rs  day4.rs  day8.rs  mod.rs  template.rs
src/year_2022/: day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day17.rs  day19.rs  day20.rs  day22.rs  day23.rs  day24.rs  day5.rs  day6.rs  mod.rs  (+3 more)
(+159 files in other folders)
