[package]
name = "rough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
md5 = "0.7.0"
ordered-float = "4.2.0"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = { default-features = false, version = "1.9.1", features = ["unicode-perl"] }
rustc-hash = "1.1.0"
scan_fmt = "0.2.6"
serde_json = "1.0.104"
to-binary = "0.4.0"

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
