[package]
name = "rough"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
derive_more = "0.99.17"
divisors = "0.2.1"
grid = "0.13.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
nalgebra = "0.32.3"
ordered-float = "4.2.0"
pest = { version = "2.7.7", features = ["pretty-print"] }
pest_derive = "2.7.7"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = { default-features = false, version = "1.9.1", features = ["unicode-perl"] }
rustc-hash = "1.1.0"
scan_fmt = "0.2.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.104"
your_game_of_life = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
