[package]
name = "rough"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
divisors = "0.2.1"
grid = "0.15.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
nalgebra = "0.33.2"
ordered-float = "4.5.0"
pest = { version = "2.7.14", features = ["pretty-print"] }
pest_derive = "2.7.14"
petgraph = "0.6.5"
rayon = "1.10.0"
regex = { default-features = false, version = "1.11.1", features = ["unicode-perl"] }
rustc-hash = "2.1.0"
scan_fmt = "0.2.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
your_game_of_life = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
